objects/Order_Processing__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Processing</relationshipLabel>
        <relationshipName>Order_Processing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <formula>Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <formula>Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <formula>Account__r.BillingState</formula>
        <label>Billing State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <formula>Account__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_Code__c</fullName>
        <formula>Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Processing</relationshipLabel>
        <relationshipName>Order_Processing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_PO_number__c</fullName>
        <description>Spain</description>
        <label>Customer PO number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Open_Order_Amount__c</fullName>
        <formula>sf42_JP_Order_Amount__c -  sf42_JP_Invoice_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Order Processing</relationshipLabel>
        <relationshipName>Order_Processing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Repair__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PT Repair</label>
        <referenceTo>Repair__c</referenceTo>
        <relationshipLabel>Order Processing</relationshipLabel>
        <relationshipName>Order_Processing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <formula>Account__r.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <formula>Account__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State_Province__c</fullName>
        <formula>Account__r.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <formula>Account__r.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip_Postal_Code__c</fullName>
        <formula>Account__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Accepted_delivery_time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepted delivery time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Accepted_warranty_conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Spain</description>
        <label>Accepted warranty conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Account_Owner__c</fullName>
        <formula>Account__r.Owner.Full_Name_for_filters__c</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Delivery_Time__c</fullName>
        <formula>sf42_Delivery_Date__c -  sf42_Order_Date__c</formula>
        <label>Delivery Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ptt_Delivery_remarks__c</fullName>
        <inlineHelpText>Additional information about delivery.</inlineHelpText>
        <label>Delivery remarks</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ptt_Prices_according_to_quotation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Spain</description>
        <label>Prices according to quotation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>sf42_Project__c</referenceTo>
        <relationshipLabel>Costs</relationshipLabel>
        <relationshipName>Order_Processing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Purchasing_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Spain</description>
        <label>Purchasing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Processing (Purchasing Contact)</relationshipLabel>
        <relationshipName>OP_Purchasing_Contat</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Special_Instructions__c</fullName>
        <description>Spain</description>
        <label>Special Instructions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ptt_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Approval - Test done</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Goods receive</fullName>
                </value>
                <value>
                    <fullName>Goods sent to customer</fullName>
                </value>
                <value>
                    <fullName>Installed</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>Invoice send</fullName>
                </value>
                <value>
                    <fullName>O.C. received, waiting for delivery</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                    <default>true</default>
                    <label>Ordered</label>
                </value>
                <value>
                    <fullName>P.O. sent to supplier</fullName>
                </value>
                <value>
                    <fullName>Paid before delivery</fullName>
                </value>
                <value>
                    <fullName>Partial delivery</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>With Incidence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_Tax_number__c</fullName>
        <description>Spain</description>
        <label>Tax number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Delivery_Date__c</fullName>
        <inlineHelpText>When customer will receive the goods?</inlineHelpText>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_JP_Costs__c</fullName>
        <description>Sum of all Direct Costs associated with Order.</description>
        <inlineHelpText>Sum of all Direct Costs associated with Order.</inlineHelpText>
        <label>Costs</label>
        <summarizedField>sf42_Costs__c.sf42_Amount__c</summarizedField>
        <summaryForeignKey>sf42_Costs__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sf42_JP_Gross_Profit_Percent__c</fullName>
        <formula>IF((sf42_JP_Invoice_Amount__c=0),0,(sf42_JP_Invoice_Amount__c - sf42_JP_Costs__c)/sf42_JP_Invoice_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Profit Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>sf42_JP_Gross_Profit__c</fullName>
        <formula>sf42_JP_Invoice_Amount__c -  sf42_JP_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sf42_JP_Invoice_Amount__c</fullName>
        <inlineHelpText>Sum of all Invoice amounts (without consumption tax) associated with Order.</inlineHelpText>
        <label>Invoice Amount</label>
        <summarizedField>sf42_Invoice__c.sf42_Amount__c</summarizedField>
        <summaryForeignKey>sf42_Invoice__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sf42_JP_Order_Amount__c</fullName>
        <label>Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sf42_Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <label>PT - Order Processing</label>
    <listViews>
        <fullName>Closed_Order</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>ptt_Status__c</columns>
        <columns>sf42_Order_Date__c</columns>
        <columns>sf42_Delivery_Date__c</columns>
        <columns>sf42_JP_Order_Amount__c</columns>
        <columns>sf42_JP_Gross_Profit__c</columns>
        <columns>sf42_JP_Gross_Profit_Percent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Delivery_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2020</value>
        </filters>
        <filters>
            <field>ptt_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed Order</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>JapanEmployee</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>open_orders</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>sf42_Order_Date__c</columns>
        <columns>Opportunity__c</columns>
        <columns>ptt_Status__c</columns>
        <columns>sf42_Delivery_Date__c</columns>
        <columns>sf42_JP_Order_Amount__c</columns>
        <columns>sf42_JP_Invoice_Amount__c</columns>
        <columns>sf42_JP_Costs__c</columns>
        <columns>sf42_JP_Gross_Profit__c</columns>
        <columns>sf42_JP_Gross_Profit_Percent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ptt_Status__c</field>
            <operation>equals</operation>
            <value>Delivered,Ordered</value>
        </filters>
        <filters>
            <field>Billing_Country__c</field>
            <operation>equals</operation>
            <value>Japan</value>
        </filters>
        <label>Open Orders</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Japan</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>OP# {000000}</displayFormat>
        <label>OP-Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Processing</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>